<resources>
    <string name="app_name">points</string>
    <string name="pointA3">+3points</string>
    <string name="pointA2">+2points</string>
    <string name="pointA1">+1points</string>
    <string name="pointB3">+3points</string>
    <string name="pointB2">+2points</string>
    <string name="pointB1">+1points</string>
    <string name="pointA">0</string>
    <string name="pointB">0</string>
    <string name="title_activity_change_rate">ChangeRate</string>
    <string name="hello_world1">欢迎使用！</string>
    <string name="lab_approve">赞成</string>
    <string name="lab_object">反对</string>
    <string name="lab_abstain">弃权</string>
    <!--
    This string is used for square devices and overridden by hello_world in
    values-round/strings.xml for round devices.
    -->
    <string name="hello_world">Hello Square World!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>