<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="60dp"
                android:layout_marginTop="16dp"
                android:text="TeamA"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/pointA"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="90dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="75dp"
                android:text="@string/pointA"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonA3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/pointA3" />

            <Button
                android:id="@+id/buttonA2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/pointA2" />

            <Button
                android:id="@+id/buttonA1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/pointA1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="50dp"
                android:layout_marginTop="16dp"
                android:text="TeamB"
                android:textSize="30sp" />

            <TextView
                android:id="@+id/pointB"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="75dp"
                android:layout_marginTop="16dp"
                android:layout_marginRight="90dp"
                android:text="@string/pointB"
                android:textSize="50sp" />

            <Button
                android:id="@+id/buttonB3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginTop="24dp"
                android:layout_marginRight="24dp"
                android:text="@string/pointB3" />

            <Button
                android:id="@+id/buttonB2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginTop="8dp"
                android:text="@string/pointB2" />

            <Button
                android:id="@+id/buttonB1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="24dp"
                android:layout_marginRight="24dp"
                android:layout_marginBottom="32dp"
                android:text="@string/pointB1" />
        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:layout_editor_absoluteX="274dp">


        <Button
            android:id="@+id/button7"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="500dp"
            android:layout_marginLeft="150dp"
            android:layout_marginRight="150dp"
            android:text="Reset" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>